--- a/jasmine-standalone-2.5.0/SpecRunner.html
+++ b/jasmine-standalone-2.5.0/SpecRunner.html
@@ -18,6 +18,7 @@
   <!-- include spec files here... -->
   <script src="spec/AirportSpec.js"></script>
   <script src="spec/PlaneSpec.js"></script>
+  <script src="spec/FeatureSpec.js"></script>
 
 </head>
 
